fix align

--- a/main.css
+++ b/main.css
@@ -39,7 +39,7 @@ canvas.disabled {
   z-index: 10;
 }
 
-#objects .object span.weight {
+span.weight {
   position: relative;
   top: -15px;
   left: 5px;
@@ -48,7 +48,7 @@ canvas.disabled {
   background-color: rgba(255,255,255,1);
   opacity: 0.5;
 }
-#objects .object span.image {
+span.image {
   position: relative;
   left: -8px;
   top: -8px;
@@ -67,42 +67,42 @@ canvas.disabled {
 }
 .hellfire span.image {
   background-image: url(images/hellfire.gif);
-  width: 30px !important;
-  height: 52px !important;
-  left: -15px !important;
-  top: -26px !important;
+  width: 30px;
+  height: 52px;
+  left: -15px;
+  top: -10px;
 }
 
 .love span.image {
   background-image: url(images/love.gif);
-  width: 27px !important;
-  height: 28px !important;
-  left: -13.5px !important;
-  top: -14px !important;
+  width: 27px;
+  height: 28px;
+  left: -13.5px;
+  top: -14px;
 }
 
 .veryangry span.image {
   background-image: url(images/veryangry.gif);
-  width: 33px !important;
-  height: 36px !important;
-  left: -16.5px !important;
-  top: -17px !important;
+  width: 33px;
+  height: 36px;
+  left: -16px;
+  top: -12px;
 }
 
 .paradise span.image {
   background-image: url(images/paradise.gif);
-  width: 19px !important;
-  height: 19px !important;
-  left: -8.5px !important;
-  top: -8.5px !important;
+  width: 19px;
+  height: 19px;
+  left: -8px;
+  top: -8px;
 }
 
 .pizza span.image {
   background-image: url(images/pizza.gif);
-  width: 19px !important;
-  height: 19px !important;
-  left: -8.5px !important;
-  top: -8.5px !important;
+  width: 19px;
+  height: 19px;
+  left: -8px;
+  top: -8px;
 }
 
 footer {
